welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
   if (estFaceMur()==true){
     return false
   }
   avance()
   var x: Color= GetCouleurSol()
   recule()
   if (!(x==Color.green)){
     return false
   }
   return true
}